Make sure to call FireErrorNotification whenever we need to.  Bug 318473, r=sicking, sr=brendan